--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div>
                         <p>Task Assigned</p>
-                        <h1 class="font-bold text-2xl">05</h1>
+                        <h1 class="font-bold text-2xl">06</h1>
                     </div>
                 </div>
 
@@ -67,12 +67,120 @@
                     </div>
                     <div>
                         <p>Wed ,</p>
-                        <h1 class="font-bold text-2xl">Jul 28 2025 </h1>
+                        <h1 class="font-semibold text-xl">Jul 28 2025 </h1>
                     </div>
                 </div>
 
             </div>
 
+
+            <!-- task cards -->
+             <div class="grid grid-cols-3 gap-4 mt-10 mx-2 justify-center items-center">
+                <!-- cards 1 -->
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">ShopEase</span>
+                    <h1 class="my-4 text-xl">Fix Mobile Button Issue </h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">CloudSync</span>
+                    <h1 class="my-4 text-xl">Add Dark Mode</h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">SwiftPay</span>
+                    <h1 class="my-4 text-xl">Optimize  Home page </h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Meta</span>
+                    <h1 class="my-4 text-xl">Add new emoji 🤲</h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Google LLC</span>
+                    <h1 class="my-4 text-xl">Integrate OpenAI API </h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+                 <div class="bg-slate-200 px-3 py-3 rounded-xl">
+                    <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Glassdoar</span>
+                    <h1 class="my-4 text-xl">Improve Job searching </h1>
+                    <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+
+                    <div class="flex justify-between items-center mt-2">
+                        <div>
+                            <p class="text-gray-500">Deadline</p>
+                            <p class="font-semibold">21 March 2025</p>
+                        </div>
+                        <div>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                        </div>
+                    </div>
+                 </div>
+
+             </div>
 
          </div>
 
