--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 </head>
-<body class="bg-slate-200 container mx-auto">
+<body id="body" class="bg-slate-200 container mx-auto">
     <header class="bg-white rounded-xl px-4 mt-5 py-3">
         <nav class="flex justify-between">
             <!-- logo  -->
@@ -23,7 +23,8 @@
                 <h1 class="mx-3 font-bold text-xl">23</h1>
             </div>
 
-            <img src="assets/theme-btn.png" alt="">
+            <img id="color-piker" src="assets/theme-btn.png" alt="">
+            
            </div>
         </nav>
     </header>
@@ -94,6 +95,7 @@
                     </div>
                  </div>
 
+                 <!-- card 2 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">CloudSync</span>
                     <h1 class="my-4 text-xl">Add Dark Mode</h1>
@@ -111,7 +113,7 @@
                     </div>
                  </div>
 
-
+                 <!-- card 3 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">SwiftPay</span>
                     <h1 class="my-4 text-xl">Optimize  Home page </h1>
@@ -129,6 +131,7 @@
                     </div>
                  </div>
 
+                 <!-- card 4 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Meta</span>
                     <h1 class="my-4 text-xl">Add new emoji 🤲</h1>
@@ -146,6 +149,7 @@
                     </div>
                  </div>
 
+                 <!-- card 5 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Google LLC</span>
                     <h1 class="my-4 text-xl">Integrate OpenAI API </h1>
@@ -163,6 +167,7 @@
                     </div>
                  </div>
 
+                 <!-- card 6 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Glassdoar</span>
                     <h1 class="my-4 text-xl">Improve Job searching </h1>
@@ -195,5 +200,8 @@
             </div>
           </div>
     </main>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
