--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <div class="flex justify-center items-center">
             <div class="flex justify-center items-center mx-5 bg-slate-300 rounded-xl py-2 px-4">
                 <img src="assets/checkbox.png" alt="">
-                <h1 class="mx-3 font-bold text-xl">23</h1>
+                <h1 id="count-complete" class="mx-3 font-bold text-xl">23</h1>
             </div>
 
             <img id="color-piker" src="assets/theme-btn.png" alt="">
@@ -45,7 +45,7 @@
                     </div>
                     <div>
                         <p>Task Assigned</p>
-                        <h1 class="font-bold text-2xl">06</h1>
+                        <h1 id="task-assing" class="font-bold text-2xl">06</h1>
                     </div>
                 </div>
 
@@ -90,7 +90,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class=" bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
@@ -108,7 +108,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
@@ -126,7 +126,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
@@ -144,7 +144,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
@@ -162,7 +162,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
@@ -180,7 +180,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg">Completed</button>
+                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
