added set activity div and also clear the activity history

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <!-- card 2 -->
-                <div class="flex justify-center gap-3 items-center rounded-xl py-5 bg-linear-to-r/srgb from-indigo-500 to-teal-400">
+                <div id="discover" class="flex justify-center gap-3 items-center rounded-xl py-5 bg-linear-to-r/srgb from-indigo-500 to-teal-400">
 
                     <div class="bg-white p-3 rounded-full">
                         <img class="w-8" src="assets/board.png" alt="">
@@ -191,13 +191,20 @@
 
          <!-- side ber section -->
           <div class="w-[20%] bg-white min-h-screen rounded-xl">
+
             <div class="text-center space-y-3 mt-5">
                 <div class="flex justify-center items-center text-2xl">
                     <img src="assets/activity.png" alt="">
                     <h1 class="font-bold mx-2">Activity Log</h1>
                 </div>
-                <button class="bg-blue-600 text-white py-2 px-4 rounded-xl">Clear History</button>
+                <button id="activity-btn" class="bg-blue-600 text-white py-2 px-4 rounded-xl">Clear History</button>
             </div>
+
+
+            <div id="activity" class="rounded-xl p-2 m-2">
+
+            </div>
+
           </div>
     </main>
 
