added missing alart in task button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <!-- card 3 -->
-                <div class="flex justify-center gap-3 items-center bg-slate-300 rounded-xl py-5">
+                <div id="calender" class="flex justify-center gap-3 items-center bg-slate-300 rounded-xl py-5">
 
                     <div class="bg-white p-3 rounded-full">
                         <img src="assets/calender.png" alt="">
