--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 </div>
 
                 <!-- card 3 -->
-                <div id="calender" class="flex justify-center gap-3 items-center bg-slate-300 rounded-xl py-5">
+                <div class="flex justify-center gap-3 items-center bg-slate-300 rounded-xl py-5">
 
                     <div class="bg-white p-3 rounded-full">
                         <img src="assets/calender.png" alt="">
                     </div>
-                    <div>
+                    <div id="calender">
                         <p>Wed ,</p>
                         <h1 class="font-semibold text-xl">Jul 28 2025 </h1>
                     </div>
@@ -80,7 +80,7 @@
                 <!-- cards 1 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">ShopEase</span>
-                    <h1 class="my-4 text-xl">Fix Mobile Button Issue </h1>
+                    <h1 class="my-4 text-xl title">Fix Mobile Button Issue </h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -98,7 +98,7 @@
                  <!-- card 2 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">CloudSync</span>
-                    <h1 class="my-4 text-xl">Add Dark Mode</h1>
+                    <h1 class="my-4 text-xl title">Add Dark Mode</h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -116,7 +116,7 @@
                  <!-- card 3 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">SwiftPay</span>
-                    <h1 class="my-4 text-xl">Optimize  Home page </h1>
+                    <h1 class="my-4 text-xl title">Optimize  Home page </h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -134,7 +134,7 @@
                  <!-- card 4 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Meta</span>
-                    <h1 class="my-4 text-xl">Add new emoji 🤲</h1>
+                    <h1 class="my-4 text-xl title">Add new emoji 🤲</h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -152,7 +152,7 @@
                  <!-- card 5 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Google LLC</span>
-                    <h1 class="my-4 text-xl">Integrate OpenAI API </h1>
+                    <h1 class="my-4 text-xl title">Integrate OpenAI API </h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -170,7 +170,7 @@
                  <!-- card 6 -->
                  <div class="bg-slate-200 px-3 py-3 rounded-xl">
                     <span class="bg-white p-2 rounded-lg text-sm text-gray-500">Glassdoar</span>
-                    <h1 class="my-4 text-xl">Improve Job searching </h1>
+                    <h1 class="my-4 text-xl title">Improve Job searching </h1>
                     <p class="bg-white p-2 rounded-lg text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
                     and ensure onClick works properly</p>
 
@@ -180,7 +180,7 @@
                             <p class="font-semibold">21 March 2025</p>
                         </div>
                         <div>
-                            <button class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
+                            <button id="completed" class="bg-blue-600 px-2 py-2 text-white rounded-lg complete-btn">Completed</button>
                         </div>
                     </div>
                  </div>
