--- a/question.html
+++ b/question.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question</title>
+
+    <!-- tailwind css CDN -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    <main>
-        <h1>sdjkhfsdlkjfh</h1>
+<body class="bg-slate-200 container mx-auto">
+    <header class="bg-white rounded-xl px-4 mt-5 py-3">
+        <nav class="flex justify-between">
+            <!-- logo  -->
+           <div class="flex justify-center items-center text-2xl">
+            <img src="./assets/logo.png" alt="">
+            <h1>Dev<span class="font-bold">Board</span></h1>
+           </div>
+           <!-- right side button -->
+           <button id="back-desk" class="bg-blue-600 text-white rounded-xl py-2 px-2">Back to Desk</button>
+    </header>
+
+    <main class="mt-10 space-y-4">
+        <h1 class="text-center text-2xl font-bold">Blogs</h1>
+        <div class="bg-white space-y-5 p-3 rounded-md">
+            <h1 class="text-xl">Question-1: What are the different ways to select an element in the DOM?
+            </h1>
+            <p class="text-gray-600">There are many different ways to select element in DOM for example getElementById (it's select by id), getElementByClassName (its select by class name), getElementByTagName (its select by tag name), querySelector (its select CSS single element by CSS selector), querySelectorAll (its select multiple CSS element by CSS selector).</p>
+        </div>
+
+        <div class="bg-white space-y-5 p-3 rounded-md">
+            <h1 class="text-xl">Question-2: What is the difference between innerHTML, innerText, and textContent?
+            </h1>
+            <p class="text-gray-600">In JavaScript, "innerHTML" retrieves the complete HTML content within an element, including tags, while "innerText" returns only the visible text content of an element (ignoring styling), and "textContent" retrieves all text content within an element, including hidden elements and whitespace, but without interpreting any HTML tags; essentially, "innerText" is more visually-oriented, while "textContent" provides raw text data.</p>
+        </div>
+
+        <div class="bg-white space-y-5 p-3 rounded-md">
+            <h1 class="text-xl">Question-3: What is event delegation in the DOM?
+            </h1>
+            <p class="text-gray-600">In the DOM (Document Object Model), "event delegation" is a technique where you attach a single event listener to a parent element, allowing it to handle events triggered on its child elements, instead of adding separate listeners to each child element, effectively "delegating" the event handling to the parent; this leverages the event bubbling mechanism where events propagate upwards through the DOM tree, making it more efficient for large lists of dynamic elements.</p>
+        </div>
+
+        <div class="bg-white space-y-5 p-3 rounded-md">
+            <h1 class="text-xl">Question-4: What is event bubbling in the DOM?
+            </h1>
+            <p class="text-gray-600">In the DOM (Document Object Model), "event bubbling" refers to the process where when an event occurs on an element, it triggers not only on that element but also on its parent elements in the DOM hierarchy, essentially "bubbling up" the event until it reaches the topmost parent element, like the document itself; allowing you to potentially handle the event at any level of the hierarchy with a single event listener on a parent element. </p>
+        </div>
+
+        <div class="bg-white space-y-5 p-3 rounded-md">
+            <h1 class="text-xl">Question-5: How do you create, add, and remove elements using JavaScript?
+            </h1>
+            <p class="text-gray-600">An index is the position of an element in the array. The first element in the array has an index of 0, the second element has an index of 1, and so on. To add elements at a specific index, you can use the splice method. The splice method allows you to add and remove elements from a specific index in an array.</p>
+        </div>
     </main>
+
+    <script src="js/question.js"></script>
 </body>
 </html>
